Fixes memcached error as with more than 4 documents, the key was too long.

--- a/classroom/src/app/boxplot/boxplot.component.css
+++ b/classroom/src/app/boxplot/boxplot.component.css
@@ -1,7 +1,3 @@
-.boxplot_container {
-  margin-left: 20px;
-  margin-right: 20px;
-}
 .graph_container {
   display: flex;
   flex-direction: row;
